# triage_agent_env

./: .gitignore  Blog.md  Colab_Smoke_Test.ipynb  ENV_README.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.codesight/: CODESIGHT.md  config.md  graph.md  libs.md
assets/: baseline_eval.json
data/: build_corpus.py  eval_tickets.json  incidents.json  kb.json  past_tickets.json  train_tickets.json
docs/: OpenEnv_RL_Senior_Dev_Brief.md  TriageAgent_Design.md
scripts/: baseline_eval.py  validate_rewards.py
server/: Dockerfile  __init__.py  app.py  corpus.py  dataset.py  rag_judge_env_environment.py  rewards.py  tools.py  triage_environment.py
server/static/: index.html
training/: train_grpo.ipynb  train_grpo.py  train_grpo_colab.ipynb  train_grpo_colab_openenvHackathon_finale.ipynb  train_grpo_v2.py  train_grpo_v3.py  train_grpo_v4.py
